2006-05-04  Derek Price  <derek@ximbiot.com>

	[bug #16449]  Compile with --disable-server.
	* server.c: Don't compile server-only functions without server support.
	* base.c, sign.c, update.c: Don't call server-only functions without
	server support.

	* client.c (send_file_names): Suppress compiler warning.

	[bug #16450]  Compile with --disable-case-sensitivity.
	* client.c: #include "save-cwd.h".

2006-05-04  Mark D. Baushke  <mdb@gnu.org>

	* filesubr.c (cvs_temp_file): Avoid keeping pointers to free()'d
	storage laying around.
	* commit.c (commit): Handle possible NULL filename values
	returned from cvs_temp_file().
	* filesubr.c (cvs_temp_name): Ditto.
	* import.c (import): Ditto.
	* login.c (password_entry_operation): Ditto.
	* logmsg.c (do_verify): Ditto.
	* patch.c (patch_fileproc): Ditto.
	[Fixes NetBSD coverity cid-2545.]

	* buffer.c (packetizing_buffer_output): Initialize outdata.
	[Fixes NetBSD coverity cid-2474.]

	* server.c (server_updated): Check for NULL return from
	findnode_fn(). [Fixes NetBSD coverity cid-1352.]

2006-05-01  Derek Price  <derek@ximbiot.com>

	* sanity.sh: Remove first-person from content.

	* sanity.sh: Clean up GPG tests using GPGs --dump-options command.
	(Suggestion from Mark D. Baushke <mdb@gnu.org>.)

	* sanity.sh: Change some "Notice:" headers and all "Warning:" headers
	to "WARNING:" for consistency.

2006-04-28  Derek Price  <derek@ximbiot.com>

	* sanity.sh: Handle GPG secret key import errors.

2006-04-27  Derek Price  <derek@ximbiot.com>

	* sanity.sh: Set a default for $GPG for when sanity.config.sh cannot be
	found.

	* sanity.sh: Some versions of GPG don't like --allow-secret-key-import
	option.  Deal with that.  Comment thoroughly.
	(Report from Larry Jones <lawrence.jones@ugs.com>.)

2006-04-26  Derek Price  <derek@ximbiot.com>
	    Mark D. Baushke  <mdb@gnu.org>

	* sanity.sh: Use --no-secmem-warning to suppress GPG warnings.

2006-04-25  Derek Price  <derek@ximbiot.com>
