@@ -1,5 +1,10 @@
 2006-05-04  Derek Price  <derek@ximbiot.com>
 
+	* gssapi-client.h: Reformat.
+
+	[bug #15573]  Eliminate warnings with --disable-client.
+	* gssapi-client.h: Elide some protos without client support.
+
 	[bug #16449]  Compile with --disable-server.
 	* server.c: Don't compile server-only functions without server support.
 	* base.c, sign.c, update.c: Don't call server-only functions without
